--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
+    "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "apollo": "^2.33.9",
+    "apollo3-cache-persist": "^0.13.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "graphql": "^16.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
