--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "jsx": "react",
-    "jsx": "react",
-    "strict": true
+    "strict": true,
+    "strictNullChecks": true
   }
 }
