--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "apollo": "^2.33.9",
     "apollo3-cache-persist": "^0.13.0",
     "expo": "~44.0.0",
