--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@expo/vector-icons": "^12.0.5",
     "@graphql-tools/graphql-tag-pluck": "^7.1.4",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "apollo": "^2.33.9",
     "apollo3-cache-persist": "^0.13.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.2.0",
+    "graphql-tag": "^2.12.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -40,6 +44,15 @@
     "@graphql-codegen/typescript-react-apollo": "3.2.3",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
     "typescript": "~4.3.5"
   },
   "private": true
